# backend/internal/api/user/controller.go
@@ -39,3 +39,28 @@ func (ctrl *Controller) Profile(c echo.Context) error {
 	}
 	return c.JSON(http.StatusOK, user)
 }
+
+// ChangePassword User Change Password
+//
+// @Summary      User Change Password
+// @Description  User Change Password
+// @Tags         User
+// @Accept       json
+// @Produce      json
+// @Param        request    body  ChangePasswordData   true "change user password data"
+// @Success      200  {object}  nil
+// @Router       /user/password [post]
+func (ctrl *Controller) ChangePassword(c echo.Context) error {
+	var data ChangePasswordData
+	if err := ctrl.request.DoValidate(c, &data); err != nil {
+		return ctrl.request.BadRequest(c, err)
+	}
+
+	userID := c.Get("userID").(string)
+
+	err := ctrl.userRepo.ChangePassword(c.Request().Context(), userID, data.CurrentPassword, data.NewPassword)
+	if err != nil {
+		return ctrl.request.BadRequest(c, err)
+	}
+	return c.JSON(http.StatusOK, nil)
+}
