# backend/internal/api/user/types.go
@@ -1,1 +1,6 @@
 package user
+
+type ChangePasswordData struct {
+	CurrentPassword string `json:"current_password" validate:"required"`
+	NewPassword     string `json:"new_password" validate:"required"`
+}
